docs/version-1.10/modules/en/pages/migration/migration.adoc
= Migrating to {longhorn-product-name}
:revdate: 2026-01-28
:page-revdate: {revdate}
	
[WARNING]
====
It is recommended to create a xref:snapshots-backups/system-backups/create-system-backup.adoc[Longhorn system backup] before performing the upgrade. This ensures that all critical resources, such as volumes and backing images, are backed up and can be restored in case any issues arise.
====

== Prerequisites

=== Tools

* https://helm.sh/docs/[Helm] v3.0 or later is required.
* The xref:longhorn-system/system-access/longhorn-cli.adoc[Longhorn Command Line Tool] can be used to check the {longhorn-product-name} environment for potential issues.

=== Authentication

* To authenticate Helm with SUSE Application Collection OCI chart repository, refer to the https://docs.apps.rancher.io/get-started/authentication/#helm[Helm authentication documentation].
* To allow Kubernetes to pull images from the registry, follow the https://docs.apps.rancher.io/get-started/authentication/#kubernetes[Kubernetes authentication documentation] to create a secret and set the `global.imagePullSecrets` chart value.

== Migrating Longhorn Deployed via Helm To {longhorn-product-name}

If your existing Longhorn installation was deployed via Helm, you can verify it by running `helm list --all-namespaces`. By default, the Helm release used to install Longhorn is named `longhorn`, but it may also be a custom name defined by the user.
	
Next, optionally create a `values.yaml` file with any customized settings you want to apply during the upgrade.

Proceed with the upgrade to {longhorn-product-name} using the {longhorn-product-name} chart:

[,shell]
----
helm upgrade longhorn oci://dp.apps.rancher.io/charts/suse-storage \
	--namespace longhorn-system \
	--version <version> \ # Replace with the version you would like to upgrade to
	--set global.imagePullSecrets=<PULL_IMAGE_SECRET>
----

Optionally, if you have a `values.yaml` file with customized settings, include it with the `-f` flag:

[,shell]
----
helm upgrade longhorn oci://dp.apps.rancher.io/charts/suse-storage \
	--namespace longhorn-system \
	--version <version> \ # Replace with the version you would like to upgrade to
	--set global.imagePullSecrets=<PULL_IMAGE_SECRET> \
	-f values.yaml
----
	
== Migrating Longhorn deployed via Rancher Apps Marketplace to {longhorn-product-name}

If your existing Longhorn installation was deployed via Rancher Apps Marketplace, you would see two Helm releases associated with Longhorn when running `helm list --all-namespaces | grep longhorn`.

The following example is migrating Longhorn {patch-version} installed via Rancher charts to {longhorn-product-name} {patch-version}.

[,shell]
----
$ helm list --all-namespaces | grep longhorn
longhorn                                         	longhorn-system    	1       	2025-10-20 02:58:40.877484249 +0000 UTC	deployed	longhorn-108.2.0+up1.10.1                                                                               	v1.10.1
longhorn-crd                                     	longhorn-system    	1       	2025-10-20 02:58:38.192579711 +0000 UTC	deployed	longhorn-crd-108.2.0+up1.10.1                                                                           	v1.10.1
----

To migrate the existing Rancher Longhorn installation to {longhorn-product-name}, you need to delete the `longhorn-crd` Helm release without removing the CRDs, and then upgrade the `longhorn` Helm release by following the steps below. 

=== Remove `longhorn-crd` Helm Release while Keeping CRDs

To remove the `longhorn-crd` Helm release from your system while ensuring the Longhorn CRDs themselves are preserved, follow these steps:

. Check the current version of your `longhorn-crd` Helm release:
+
[,shell]
----
helm list --all-namespaces | grep longhorn-crd
----
+
The output shows your `longhorn-crd` release details, for example:
+
[,bash]
----
longhorn-crd                                     	longhorn-system    	1       	2025-10-20 02:58:38.192579711 +0000 UTC	deployed	longhorn-crd-108.2.0+up1.10.1                                                                           	v1.10.1
----
+
In this example, the release version is `108.2.0+up1.10.1`.

. Clone the `rancher/charts` repository containing the specific version of the `longhorn-crd` chart that matches your current release (for example, `108.2.0+up1.10.1` for Longhorn v1.10.1):
+
[,shell]
----
git clone https://github.com/rancher/charts.git
----
+
Navigate into the directory corresponding to your `longhorn-crd` chart version within the cloned repository.
+
Or, you can execute this link:{attachmentsdir}/download-longhorn-crd-chart.sh[script] to `longhorn-crd` chart.
+
After running the command `bash ./download-longhorn-crd-chart.sh 108.2.0+up1.10.1`, the `longhorn-crd` chart is downloaded to the local directory `108.2.0+up1.10.1`. Then, open `108.2.0+up1.10.1/Chart.yaml` to verify that the chart version matches `108.2.0+up1.10.1`.

. Manually patch the `helm.sh/resource-policy: keep` annotation to *each Custom Resource Definitions (CRDs)* in `templates/crds.yaml` within the `longhorn-crd` chart that you cloned. This ensures that Helm does not delete the CRDs when the release is uninstalled.
Alternatively, you can use the link:{attachmentsdir}/patch-resource-policy-annotation.sh[script] to automatically patch the annotation:
+
[,shell]
----
bash ./patch-resource-policy-annotation.sh 108.2.0+up1.10.1/templates/crds.yaml
----
+
To verify that the CRDs have been correctly patched, run:
+
[,shell]
----
vimdiff /tmp/crds.yaml.original 108.2.0+up1.10.1/templates/crds.yaml
----

. Upgrade the `longhorn-crd` Helm release using the locally patched chart:
+
[,shell]
----
helm upgrade longhorn-crd -n longhorn-system ./108.2.0+up1.10.1
----

. Uninstall the `longhorn-crd` Helm release from your system. Due to the applied patch, the CRDs remain intact.
+
[,shell]
----
helm uninstall longhorn-crd --namespace longhorn-system
----
+
You can see the CRDs are kept while uninstalling `longhorn-crd` Helm release.
+
[,shell]
----
$ helm uninstall longhorn-crd --namespace longhorn-system
These resources were kept due to the resource policy:
[CustomResourceDefinition] backingimagedatasources.longhorn.io
[CustomResourceDefinition] backingimagemanagers.longhorn.io
[CustomResourceDefinition] nodes.longhorn.io
[CustomResourceDefinition] orphans.longhorn.io
[CustomResourceDefinition] recurringjobs.longhorn.io
[CustomResourceDefinition] replicas.longhorn.io
[CustomResourceDefinition] settings.longhorn.io
[CustomResourceDefinition] sharemanagers.longhorn.io
[CustomResourceDefinition] snapshots.longhorn.io
[CustomResourceDefinition] supportbundles.longhorn.io
[CustomResourceDefinition] systembackups.longhorn.io
[CustomResourceDefinition] systemrestores.longhorn.io
[CustomResourceDefinition] backingimages.longhorn.io
[CustomResourceDefinition] volumeattachments.longhorn.io
[CustomResourceDefinition] volumes.longhorn.io
[CustomResourceDefinition] backupbackingimages.longhorn.io
[CustomResourceDefinition] backups.longhorn.io
[CustomResourceDefinition] backuptargets.longhorn.io
[CustomResourceDefinition] backupvolumes.longhorn.io
[CustomResourceDefinition] engineimages.longhorn.io
[CustomResourceDefinition] engines.longhorn.io
[CustomResourceDefinition] instancemanagers.longhorn.io
----

=== Replace `longhorn-crd` with `longhorn` in Longhorn CRDs

After ensuring the `longhorn-crd` Helm release is uninstalled but the CRDs are kept, you need to update the ownership labels on the existing Longhorn CRDs to prepare for the main `longhorn` Helm chart. Apply the link:{attachmentsdir}/migrate-crd-ownership.sh[shell script] to perform the replacement.

=== Upgrade to {longhorn-product-name}

After the CRDs have been prepared, you can proceed with upgrading your Longhorn installation to {longhorn-product-name}:

[,shell]
----
helm upgrade longhorn oci://dp.apps.rancher.io/charts/suse-storage \
	--namespace longhorn-system \
	--version <version> \ # Replace with the version you would like to upgrade to
	--set global.imagePullSecrets=<PULL_IMAGE_SECRET>
----

Optionally, if you have a `values.yaml` file with customized settings, include it with the `-f` flag:

[,shell]
----
helm upgrade longhorn oci://dp.apps.rancher.io/charts/suse-storage \
	--namespace longhorn-system \
	--version <version> \ # Replace with the version you would like to upgrade to
	--set global.imagePullSecrets=<PULL_IMAGE_SECRET> \
	-f values.yaml
----
